Enhance index page layout and styling with navigation buttons, floating particles, and improved glass effect descriptions. Update CSS for responsive design and add media queries for better performance on larger screens.

--- a/index.html
+++ b/index.html
@@ -6,21 +6,48 @@
   <title>Liquid Glass: Noob vs Pro</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body>
-  <div class="container">
-    <div class="section">
-      <h1 class="section-title">Pro</h1>
-      <div class="glass-card pro-glass">
-        <h2>Apple</h2>
-        <p>Liquid Glass</p>
-      </div>
+<body class="index-page">
+  <!-- Floating particles for enhanced beauty -->
+  <div class="floating-particles">
+    <div class="particle"></div>
+    <div class="particle"></div>
+    <div class="particle"></div>
+  </div>
+  
+  <div class="navigation">
+    <button class="nav-btn" onclick="window.location.href='pro.html'">Detailed Pro View</button>
+    <button class="nav-btn" onclick="window.location.href='noob.html'">Detailed Noob View</button>
+  </div>
+
+  <div class="index-container index-enhancement">
+    <!-- Enhanced header section -->
+    <div class="header-section">
+      <h1 class="main-title enhanced-title">Liquid Glass Effects</h1>
+      <p class="subtitle">Experience the difference between professional and basic glass morphism</p>
     </div>
 
-    <div class="section">
-      <h1 class="section-title">Noob</h1>
-      <div class="glass-card noob-glass">
-        <h2>Apple</h2>
-        <p>Liquid Glass</p>
+    <!-- Side-by-side comparison -->
+    <div class="comparison-section">
+      <div class="index-section">
+        <h1 class="section-title enhanced-title">Pro</h1>
+        <div class="glass-card pro-glass">
+          <h2>Apple</h2>
+          <p>Liquid Glass</p>
+        </div>
+        <div class="section-description">
+          Ultra-transparent with advanced refraction and subtle animations
+        </div>
+      </div>
+
+      <div class="index-section">
+        <h1 class="section-title enhanced-title">Noob</h1>
+        <div class="glass-card noob-glass">
+          <h2>Apple</h2>
+          <p>Liquid Glass</p>
+        </div>
+        <div class="section-description">
+          Simple glass effect with basic blur and transparency
+        </div>
       </div>
     </div>
   </div>
