Add Pro2.0 version navigation and styling enhancements. Introduce new buttons in index, noob, and pro pages linking to Pro2.0. Implement Pro2.0 glass morphism effects in CSS with animations and responsive design adjustments.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   
   <div class="navigation">
     <button class="nav-btn" onclick="window.location.href='pro.html'">Detailed Pro View</button>
+    <button class="nav-btn" onclick="window.location.href='pro2.0.html'">Detailed Pro2.0 View</button>
     <button class="nav-btn" onclick="window.location.href='noob.html'">Detailed Noob View</button>
   </div>
 
@@ -36,6 +37,17 @@
         </div>
         <div class="section-description">
           Ultra-transparent with advanced refraction and subtle animations
+        </div>
+      </div>
+
+      <div class="index-section">
+        <h1 class="section-title enhanced-title">Pro2.0</h1>
+        <div class="glass-card pro2-glass">
+          <h2>Apple</h2>
+          <p>Liquid Glass</p>
+        </div>
+        <div class="section-description">
+          Enhanced glass morphism with pulse and shimmer effects
         </div>
       </div>
 
