--- a/noob.html
+++ b/noob.html
@@ -11,6 +11,7 @@
     <div class="navigation">
       <button class="nav-btn" onclick="window.location.href='index.html'">← Back to Home</button>
       <button class="nav-btn" onclick="window.location.href='pro.html'">View Pro Version</button>
+      <button class="nav-btn" onclick="window.location.href='pro2.0.html'">View Pro2.0 Version</button>
     </div>
     
     <div class="section">
