--- a/pro.html
+++ b/pro.html
@@ -10,6 +10,7 @@
   <div class="container">
     <div class="navigation">
       <button class="nav-btn" onclick="window.location.href='index.html'">← Back to Home</button>
+      <button class="nav-btn" onclick="window.location.href='pro2.0.html'">View Pro2.0 Version</button>
       <button class="nav-btn" onclick="window.location.href='noob.html'">View Noob Version</button>
     </div>
     
